--- a/pyslowfast_kinetics400.ipynb
+++ b/pyslowfast_kinetics400.ipynb
@@ -92,7 +92,7 @@
         "id": "ksYLJWCNFR0c"
       },
       "id": "ksYLJWCNFR0c",
-      "execution_count": 7,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 52,
       "id": "944476fc",
       "metadata": {
         "attributes": {
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 53,
       "id": "339ded75",
       "metadata": {
         "id": "339ded75"
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 54,
       "id": "ff9dc0e6",
       "metadata": {
         "id": "ff9dc0e6"
@@ -181,10 +181,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nHJUk_UWcHhR",
-        "outputId": "7e45a7db-0950-4391-9b54-5eecef6c5606"
+        "outputId": "389ccb3a-6e65-4e36-bbd8-e1e75ca2892e"
       },
       "id": "nHJUk_UWcHhR",
-      "execution_count": 11,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 55
         }
       ]
     },
@@ -609,62 +609,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 61,
       "id": "d0571e5c",
       "metadata": {
         "id": "d0571e5c"
       },
       "outputs": [],
       "source": [
-        "# side_size = 256\n",
-        "# mean = [0.45, 0.45, 0.45]\n",
-        "# std = [0.225, 0.225, 0.225]\n",
-        "# crop_size = 256\n",
-        "# num_frames = 50\n",
-        "# sampling_rate = 2\n",
-        "# frames_per_second = 30\n",
-        "# slowfast_alpha = 4\n",
-        "# num_clips = 10\n",
-        "# num_crops = 3\n",
+        "side_size = 256\n",
+        "mean = [0.45, 0.45, 0.45]\n",
+        "std = [0.225, 0.225, 0.225]\n",
+        "crop_size = 256\n",
+        "num_frames = 32\n",
+        "sampling_rate = 2\n",
+        "frames_per_second = 30\n",
+        "slowfast_alpha = 4\n",
+        "num_clips = 10\n",
+        "num_crops = 3\n",
         "\n",
-        "# class PackPathway(torch.nn.Module):\n",
-        "#     \"\"\"\n",
-        "#     Transform for converting video frames as a list of tensors.\n",
-        "#     \"\"\"\n",
-        "#     def __init__(self):\n",
-        "#         super().__init__()\n",
+        "class PackPathway(torch.nn.Module):\n",
+        "    \"\"\"\n",
+        "    Transform for converting video frames as a list of tensors.\n",
+        "    \"\"\"\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
         "\n",
-        "#     def forward(self, frames: torch.Tensor):\n",
-        "#         fast_pathway = frames\n",
-        "#         # Perform temporal sampling from the fast pathway.\n",
-        "#         slow_pathway = torch.index_select(\n",
-        "#             frames,\n",
-        "#             1,\n",
-        "#             torch.linspace(\n",
-        "#                 0, frames.shape[1] - 1, frames.shape[1] // slowfast_alpha\n",
-        "#             ).long(),\n",
-        "#         )\n",
-        "#         frame_list = [slow_pathway, fast_pathway]\n",
-        "#         return frame_list\n",
+        "    def forward(self, frames: torch.Tensor):\n",
+        "        fast_pathway = frames\n",
+        "        # Perform temporal sampling from the fast pathway.\n",
+        "        slow_pathway = torch.index_select(\n",
+        "            frames,\n",
+        "            1,\n",
+        "            torch.linspace(\n",
+        "                0, frames.shape[1] - 1, frames.shape[1] // slowfast_alpha\n",
+        "            ).long(),\n",
+        "        )\n",
+        "        frame_list = [slow_pathway, fast_pathway]\n",
+        "        return frame_list\n",
         "\n",
-        "# transform =  ApplyTransformToKey(\n",
-        "#     key=\"video\",\n",
-        "#     transform=Compose(\n",
-        "#         [\n",
-        "#             UniformTemporalSubsample(num_frames),\n",
-        "#             Lambda(lambda x: x/255.0),\n",
-        "#             NormalizeVideo(mean, std),\n",
-        "#             ShortSideScale(\n",
-        "#                 size=side_size\n",
-        "#             ),\n",
-        "#             CenterCropVideo(crop_size),\n",
-        "#             PackPathway()\n",
-        "#         ]\n",
-        "#     ),\n",
-        "# )\n",
+        "transform =  ApplyTransformToKey(\n",
+        "    key=\"video\",\n",
+        "    transform=Compose(\n",
+        "        [\n",
+        "            UniformTemporalSubsample(num_frames),\n",
+        "            Lambda(lambda x: x/255.0),\n",
+        "            NormalizeVideo(mean, std),\n",
+        "            ShortSideScale(\n",
+        "                size=side_size\n",
+        "            ),\n",
+        "            CenterCropVideo(crop_size),\n",
+        "            PackPathway()\n",
+        "        ]\n",
+        "    ),\n",
+        ")\n",
         "\n",
-        "# # The duration of the input clip is also specific to the model.\n",
-        "# clip_duration = (num_frames * sampling_rate)/frames_per_second"
+        "# The duration of the input clip is also specific to the model.\n",
+        "clip_duration = (num_frames * sampling_rate)/frames_per_second"
       ]
     },
     {
@@ -681,17 +681,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "93e82872",
       "metadata": {
         "id": "93e82872"
       },
       "outputs": [],
       "source": [
-        "# url_link = \"https://dl.fbaipublicfiles.com/pytorchvideo/projects/archery.mp4\"\n",
-        "# video_path = 'photograph_ed_sheeran_harshit.mov'\n",
-        "# try: urllib.URLopener().retrieve(url_link, video_path)\n",
-        "# except: urllib.request.urlretrieve(url_link, video_path)"
+        "url_link = \"https://dl.fbaipublicfiles.com/pytorchvideo/projects/archery.mp4\"\n",
+        "video_path = 'archery.mp4'\n",
+        "try: urllib.URLopener().retrieve(url_link, video_path)\n",
+        "except: urllib.request.urlretrieve(url_link, video_path)"
       ]
     },
     {
@@ -706,31 +706,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 63,
       "id": "367aba9a",
       "metadata": {
         "id": "367aba9a"
       },
       "outputs": [],
       "source": [
-        "# # Select the duration of the clip to load by specifying the start and end duration\n",
-        "# # The start_sec should correspond to where the action occurs in the video\n",
-        "# start_sec = 0\n",
-        "# end_sec = start_sec + clip_duration\n",
-        "# video_path = '/content/piano_trimmed.mp4'\n",
+        "# Select the duration of the clip to load by specifying the start and end duration\n",
+        "# The start_sec should correspond to where the action occurs in the video\n",
+        "start_sec = 0\n",
+        "end_sec = start_sec + clip_duration\n",
         "\n",
-        "# # Initialize an EncodedVideo helper class and load the video\n",
-        "# video = EncodedVideo.from_path(video_path)\n",
+        "# Initialize an EncodedVideo helper class and load the video\n",
+        "video = EncodedVideo.from_path(video_path)\n",
         "\n",
-        "# # Load the desired clip\n",
-        "# video_data = video.get_clip(start_sec=start_sec, end_sec=end_sec)\n",
+        "# Load the desired clip\n",
+        "video_data = video.get_clip(start_sec=start_sec, end_sec=end_sec)\n",
         "\n",
-        "# # Apply a transform to normalize the video input\n",
-        "# video_data = transform(video_data)\n",
+        "# Apply a transform to normalize the video input\n",
+        "video_data = transform(video_data)\n",
         "\n",
-        "# # Move the inputs to the desired device\n",
-        "# inputs = video_data[\"video\"]\n",
-        "# inputs = [i.to(device)[None, ...] for i in inputs]"
+        "# Move the inputs to the desired device\n",
+        "inputs = video_data[\"video\"]\n",
+        "inputs = [i.to(device)[None, ...] for i in inputs]"
       ]
     },
     {
@@ -745,24 +744,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 64,
       "id": "06b07aae",
       "metadata": {
-        "id": "06b07aae"
+        "id": "06b07aae",
+        "outputId": "aa2398cc-9046-48db-9ce4-91705aa20fc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Top 5 predicted labels: archery, throwing axe, playing paintball, disc golfing, riding or walking with horse\n"
+          ]
+        }
+      ],
       "source": [
-        "# # Pass the input clip through the model\n",
-        "# preds = model(inputs)\n",
+        "# Pass the input clip through the model\n",
+        "preds = model(inputs)\n",
         "\n",
-        "# # Get the predicted classes\n",
-        "# post_act = torch.nn.Softmax(dim=1)\n",
-        "# preds = post_act(preds)\n",
-        "# pred_classes = preds.topk(k=5).indices[0]\n",
+        "# Get the predicted classes\n",
+        "post_act = torch.nn.Softmax(dim=1)\n",
+        "preds = post_act(preds)\n",
+        "pred_classes = preds.topk(k=5).indices[0]\n",
         "\n",
-        "# # Map the predicted classes to the label names\n",
-        "# pred_class_names = [kinetics_id_to_classname[int(i)] for i in pred_classes]\n",
-        "# print(\"Top 5 predicted labels: %s\" % \", \".join(pred_class_names))"
+        "# Map the predicted classes to the label names\n",
+        "pred_class_names = [kinetics_id_to_classname[int(i)] for i in pred_classes]\n",
+        "print(\"Top 5 predicted labels: %s\" % \", \".join(pred_class_names))"
       ]
     },
     {
@@ -993,7 +1004,7 @@
         "\n",
         "predictions = run_inference(\n",
         "    model=model,\n",
-        "    video_path=str('/content/piano_trimmed.mp4'),\n",
+        "    video_path=str('piano_harshit.mp4'),\n",
         "    top_k=TOP_K,\n",
         "    id_to_label_mapping=kinetics_id_to_classname,\n",
         "    num_frames=NUM_FRAMES,\n",
